filling out motivation section

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,13 +8,15 @@
         "ftap",
         "guangdong",
         "haptic",
+        "jaques",
         "maelzel",
         "maelzel's",
         "neely",
         "ryerson",
         "soundbrenner",
         "spatiotemporal",
-        "tampere"
+        "tampere",
+        "émile"
     ],
     "editor.wordWrap": "on"
 }
