--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,17 @@
 {
     "cSpell.words": [
         "arduino",
+        "asynchonies",
+        "asynchrony",
         "crusis",
         "dalcroze",
+        "entrainment",
         "enviro",
         "flyspell",
         "ftap",
         "guangdong",
         "haptic",
+        "isochronous",
         "jaques",
         "maelzel",
         "maelzel's",
@@ -16,6 +20,7 @@
         "soundbrenner",
         "spatiotemporal",
         "tampere",
+        "vibros",
         "émile"
     ],
     "editor.wordWrap": "on"
